--- a/app/pug/page_2.pug
+++ b/app/pug/page_2.pug
@@ -22,8 +22,8 @@ html
       p.nhh  - <b>Дизайнер</b>
       p.ahh
     
-      a(href='https://vk.com/gog.ortey', target="_blank").aa2 Орлов Георгий
-      p.nhh  - <b>Менеджер проекта и разработчик</b>
+      a(href='https://vk.com/gog.ortey', target="_blank").aa2 Орлов Георгий - 
+      p.nhh#nhh2 <b>Менеджер проекта и разработчик</b>
       p.ahh
     
       a(href='https://vk.com/petroffphil', target="_blank").aa3 Петров Филипп
@@ -38,7 +38,7 @@ html
       p.nhh  - <b>Разработчик</b>
       p.ahh
     .simple-text-block 
-      p На данном сайте, сначала пользователь вводит ответы, затем они преоборазуются в нужный SQL-запрос, и отправляются на сервер, в БД
+      p На данном сайте, сначала пользователь вводит ответы, затем они преобразуются в нужный SQL-запрос, и отправляются на сервер, в БД
       p Затем, когда приходит ответ, они сортируются, и выводятся в виде карточек
     .simple-text-block 
       p Если вы хотите узнать больше об этом проекте - вы можете посетить его GitHub репозиторий:
@@ -51,4 +51,5 @@ html
   .some-height
   footer 
     p 
-      a(href = 'page_2.html') Кто автор проекта?
+      p &#128522;
+      //a(href = 'page_2.html') Кто автор проекта?
