70 - Final 3 - Исправил все недочёты

--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -264,6 +264,6 @@ html
 
   footer 
     .version 
-      p 1.14
+      p У вас старая версия. Пожалуйста, очистите кеш браузера
     p 
       a(href = 'page_2.html') Кто автор проекта?
