--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -85,7 +85,7 @@ html
         p.err-inp-2 Нужно ввести число, от 15 до 30
 
       .block-qu#block-a-2-1
-        p.qu-answ Какая примерная влажность в вашем доме?
+        p.qu-answ.tyure Какая примерная влажность в вашем доме?
         .add-info.add-info-2
           span i
         p.letter-abbr a-2-1
